compilateurDeca/src/test/deca/context/invalid/sans_objet/operation/bad-minus-operation.deca

// Description:
//    Sans-Objet
//    Affectation
//    type_unary_op indéfini 
//
// Resultats:
//    Ligne 17: 
//      Type incompatible pour l'opération unaire ()
// 
// Historique:
//    cree le 06/01/2026


{
    boolean b = true;
    boolean x = -b;
}